--- a/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/networkPolicies.yaml.j2
@@ -14,16 +14,23 @@ spec:
       {{ pihole.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
-    # Allow http from the ingress controller
     - ports:
         - port: http
       from:
+        # Allow http from the ingress controller
         - namespaceSelector:
             matchLabels:
               {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+        # Allow http from the pihole-exporter
+        - namespaceSelector:
+            matchLabels:
+              name: {{ pihole_exporter.namespace }}
+          podSelector:
+            matchLabels:
+              {{ pihole_exporter.labels_def | to_nice_yaml() | indent(14) }}
     # Allow dns / dns-udp from all
     - ports:
         - port: dns
