--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -476,6 +476,14 @@ watchers:
       - ^v[0-9]+\.[0-9]+.[0-9]+
     excludes:
       - ^v1\.[0-3]\..*
+  - type: docker_registry
+    repo: {{ pihole_exporter.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ pihole_exporter.base_image.name }}
+    tag: {{ pihole_exporter.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+
+    excludes:
+      - ^0\.0\.[0-8]$
   
   # The monitoring stack is deployed using manifests generated from coreos/kube-prometheus
   #- type: docker_registry
@@ -648,4 +656,3 @@ watchers:
     tag: {{ ttrss_pgsql.base_image.tag }}
     includes:
       - ^12\.[0-9]+(\.[0-9]+)?-alpine
-
