--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -21,7 +21,7 @@ spec:
       runAsUser: 0
       runAsNonRoot: False
     volumeMounts:
-    - name: prometheus-k8s-db
+    - name: prometheus-k8s-pv-claim
       mountPath: /data
   alerting:
     alertmanagers:
@@ -64,10 +64,8 @@ spec:
   retention: {{ prometheus.retention }}
   storage:
     volumeClaimTemplate:
-      #metadata:
-      #  # Ignored, see https://github.com/coreos/prometheus-operator/issues/3093
-      #  # gets named prometheus-k8s-db
-      #  name: prometheus-k8s-pv-claim
+      metadata:
+        name: prometheus-k8s-pv-claim
       spec:
         accessModes: [ "ReadWriteOnce" ]
         storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
