Fix typo in nfs multimedia storage

--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
@@ -96,7 +96,7 @@ spec:
           claimName: nfs-download
       - name: sickchill-multimedia
         persistentVolumeClaim:
-          claimName: nfs-multimetia
+          claimName: nfs-multimedia
       - name: tmp-volume
         emptyDir: {}
       nodeSelector:
