--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
@@ -104,7 +104,7 @@ spec:
           name: jellyfin-config
       - name: jellyfin-multimedia
         persistentVolumeClaim:
-          claimName: nfs-multimetia
+          claimName: nfs-multimedia
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
