Add HW acceleration support for stream-jellyfin

--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
@@ -82,6 +82,9 @@ spec:
           limits:
             cpu: "{{ jellyfin.container.limits_cpu }}"
             memory: "{{ jellyfin.container.limits_memory }}"
+{% if jellyfin.container.limits_gpu %}
+            {{ jellyfin.container.limits_gpu | to_nice_yaml() | indent(12) }}
+{% endif %}
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
