--- a/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/service-dns.yaml.j2
+++ b/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/service-dns.yaml.j2
@@ -13,11 +13,11 @@ spec:
       port: 53
       targetPort: dns
       protocol: TCP
-      nodePort: {{ kubernetes_pihole_port }}
+      nodePort: {{ kubernetes_pihole_tcp_port }}
     - name: dns-udp
       port: 53
       targetPort: dns-udp
       protocol: UDP
-      nodePort: {{ kubernetes_pihole_port }}
+      nodePort: {{ kubernetes_pihole_udp_port }}
   selector:
     {{ pihole.labels_def | to_nice_yaml() | indent(4) }}
