Use variable for metrics-scraper

--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
@@ -302,7 +302,7 @@ spec:
     spec:
       containers:
         - name: dashboard-metrics-scraper
-          image: kubernetesui/metrics-scraper:v1.0.4
+          image: "{{ kubernetes_dashboard_metrics_scraper.container.image }}"
           imagePullPolicy: Always
           ports:
             - name: http
