--- a/ansible/install_infra/roles/glusterfs-server-install/templates/gluster-exporter.toml.j2
+++ b/ansible/install_infra/roles/glusterfs-server-install/templates/gluster-exporter.toml.j2
@@ -11,7 +11,7 @@ log-dir = "/var/log/gluster-exporter"
 log-file = "exporter.log"
 log-level = "info"
 # cache-ttl-in-sec = 0, disables caching
-cache-ttl-in-sec = 30
+cache-ttl-in-sec = 60
 # by default caching is turned off
 # to enable caching, add the function-name to 'cache-enabled-funcs' list
 # supported functions are,
@@ -23,7 +23,7 @@ cache-enabled-funcs = [ 'IsLeader', 'LocalPeerID', 'VolumeInfo' ]
 [collectors.gluster_ps]
 name = "gluster_ps"
 sync-interval = 15
-disabled = false
+disabled = true
 
 [collectors.gluster_brick]
 name = "gluster_brick"
@@ -58,9 +58,9 @@ disabled = false
 [collectors.gluster_peer_counts]
 name = "gluster_peer_counts"
 sync-interval = 15
-disabled = false
+disabled = true
 
 [collectors.gluster_peer_info]
 name = "gluster_peer_info"
 sync-interval = 15
-disabled = false
+disabled = true
