Add watcher for multus CNI

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -55,6 +55,9 @@ watchers:
     release: v3.14.0
     excludes:
       - v3\.1[0-3]\..*
+  - type: github_release
+    repo: intel/multus-cni
+    release: v3.4.2
 
 
   ###############
