Add the secondary bridge interface to home-homeassistant Allows to receive mDNS broadcasts

--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-statefulSet.yaml.j2
@@ -19,6 +19,8 @@ spec:
       labels:
         {{ homeassistant.labels_def | to_nice_yaml() | indent(8) }}
         {{ homeassistant.labels_desc | to_nice_yaml() | indent(8) }}
+      annotations:
+        k8s.v1.cni.cncf.io/networks: {{ k8s_bridge_fullname }}
     spec:
       initContainers:
       - name: create-folders
