Update flannel watcher to watch for releases

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -46,10 +46,9 @@ watchers:
   #########
   # Infra #
   #########
-  - type: github_commit
+  - type: github_release
     repo: coreos/flannel
-    branch: master
-    commit: 485649719be5a21b0fe7e44f699f7acbb66137fa
+    release: v0.12.0
   - type: github_release
     repo: projectcalico/calico
     release: v3.14.0
