Fix calico trying to use k8s bridge interface

--- a/ansible/install_infra/roles/kubernetes-master-cni-deploy/templates/calico/calico.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-master-cni-deploy/templates/calico/calico.yaml.j2
@@ -3551,7 +3551,7 @@ spec:
               value: "autodetect"
             # Skip wireguard interface
             - name: IP_AUTODETECTION_METHOD
-              value: skip-interface=wg.*
+              value: skip-interface=wg.*,k8sbr*
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
               value: "Always"
