--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -610,10 +610,9 @@ watchers:
       - ^1\.[0-9]\..*-alpine$
       - ^1\.1[0-6]\..*-alpine$
   - name: Homer
-    type: github_commit
+    type: github_release
     repo: bastienwirtz/homer
-    branch: master
-    commit: {{ homer.commit }}
+    release: {{ homer.release }}
     
   - name: TT-RSS PHP
     type: docker_registry
