--- a/ansible/install_applications/roles/web-homer.deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/config/config.yml.j2
@@ -7,6 +7,15 @@ subtitle: "{{ homer.config.subtitle }}"
 logo: "{{ homer.config.logo }}"
 icon: "{{ homer.config.icon }}"
 
+header: true # Set to false to hide the header
+footer: false
+
+columns: "3" # "auto" or number (must be a factor of 12: 1, 2, 3, 4, 6, 12)
+connectivityCheck: true # whether you want to display a message when the apps are not accessible anymore (VPN disconnected for example)
+
+# Optional theming
+theme: default # 'default' or one of the theme available in 'src/assets/themes'.
+
 {% if homer.config.message %}
 # Optional message
 message:
