--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -588,7 +588,7 @@ watchers:
     excludes:
       - 3\.[0-7]\..*
       - .*-alpine3\.[0-9]$
-      - .*-alpine3\.10
+      - .*-alpine3\.1[01]
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-anime
     tag: {{ jellyfin.plugins.anime.version }}
