--- a/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
@@ -53,7 +53,7 @@ spec:
           mountPath: /etc/localtime
           readOnly: true
         - name: homer-config
-          mountPath: /opt/homer/config.yml
+          mountPath: /opt/homer/assets/config.yml
           subPath: config.yml
         - name: homer-config
           mountPath: /opt/images.csv
