Configure infra-pihole retention

--- a/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/configMap.yaml.j2
@@ -11,3 +11,5 @@ data:
     {{ lookup('template', role_path + '/app/config/05-custom.conf.j2')  | replace('\n', '\n    ') }}
   dnsmasq_hosts: |
     {{ lookup('template', role_path + '/app/config/dnsmasq_hosts.j2')  | replace('\n', '\n    ') }}
+  pihole-FTL.conf: |
+    {{ lookup('template', role_path + '/app/config/pihole-FTL.conf.j2')  | replace('\n', '\n    ') }}
