--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -289,6 +289,16 @@ watchers:
     excludes:
       - 1\..*
       - ^2\.0\.[0-9]$
+  - type: docker_registry
+    name: Gandi LiveDNS Base image
+    repo: {{ _gandi_livedns_var_loader.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ _gandi_livedns_var_loader.base_image.name }}
+    tag: {{ _gandi_livedns_var_loader.base_image.tag }}
+    includes:
+      - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
+    excludes:
+      - 3\.[0-9]\..*
+      - 3\.1[0-1]\..*
   - type: github_release
     repo: kubernetes/ingress-nginx
     release: controller-0.33.0
