Switch to network host for home-roomassistant

--- a/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
@@ -49,5 +49,7 @@ spec:
       - name: roomassistant-config
         configMap:
           name: roomassistant-config
+      # Host network required for bluetooth
+      hostNetwork: true
       nodeSelector:
         capability/home: 'yes'
