Update home-roomassistant conf

--- a/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
@@ -25,6 +25,9 @@ spec:
       - name: roomassistant
         image: "{{ roomassistant.container.image }}"
         imagePullPolicy: Always
+        env:
+        - name: NODE_LOG_LEVEL
+          value: info
         securityContext:
           runAsNonRoot: true
           runAsUser: 1000 # node
