--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
@@ -44,6 +44,9 @@ spec:
         ports:
         - containerPort: 8080
           name: http
+        env:
+        - name: "GOTIFY_SERVER_PORT"
+          value: "8080"
         securityContext:
           runAsNonRoot: true
           runAsUser: 1000
