--- a/ansible/install_applications/roles/infra-gotify.deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/config/config.yml.j2
@@ -1,6 +1,7 @@
 server:
   listenaddr: "" # the address to bind on, leave empty to bind on all addresses
-  port: 8080 # the port for the http server
+  # Must be set as an env var, as the DockerFiel already defines a default value
+  #port: 8080 # the port for the http server
   ssl:
     enabled: false # if https should be enabled
 database: # see below
