--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeScheduler.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeScheduler.yaml.j2
@@ -7,8 +7,12 @@ metadata:
   namespace: {{ prometheus.namespace }}
 spec:
   endpoints:
-  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
-    port: http-metrics
+  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
+    port: https-metrics
+    scheme: https
+    tlsConfig:
+      insecureSkipVerify: true
   jobLabel: app.kubernetes.io/name
   namespaceSelector:
     matchNames:
