--- a/ansible/install_applications/roles/monitoring-kubernetes.deploy/app/deploy/kube-controller-manager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kubernetes.deploy/app/deploy/kube-controller-manager.yaml.j2
@@ -11,7 +11,11 @@ spec:
   selector:
     component: kube-controller-manager
   ports:
-  - name: http-metrics
-    port: 10252
-    targetPort: 10252
+#  - name: http-metrics
+#    port: 10252
+#    targetPort: 10252
+#    protocol: TCP
+  - name: https-metrics
+    port: 10257
+    targetPort: 10257
     protocol: TCP
