--- a/ansible/install_applications/roles/monitoring-kubernetes.deploy/app/deploy/kube-scheduler.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kubernetes.deploy/app/deploy/kube-scheduler.yaml.j2
@@ -11,7 +11,11 @@ spec:
   selector:
     component: kube-scheduler
   ports:
-  - name: http-metrics
-    port: 10251
-    targetPort: 10251
+#  - name: http-metrics
+#    port: 10251
+#    targetPort: 10251
+#    protocol: TCP
+  - name: https-metrics
+    port: 10259
+    targetPort: 10259
     protocol: TCP
