--- a/ansible/install_infra/roles/kubernetes-master-bootstrap/templates/kubeadm_config.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-master-bootstrap/templates/kubeadm_config.yaml.j2
@@ -9,10 +9,10 @@ networking:
 # we need to bind on 0.0.0.0 and not the dedault 127.0.0.1
 controllerManager:
   extraArgs:
-    address: 0.0.0.0
+    bind-address: 0.0.0.0
 scheduler:
   extraArgs:
-    address: 0.0.0.0
+    bind-address: 0.0.0.0
 
 ---
 
