--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -48,6 +48,8 @@ watchers:
   - type: github_release
     repo: coreos/flannel
     release: v0.12.0
+    excludes:
+      - .*-rc[0-9]+.*
   - type: github_release
     repo: projectcalico/calico
     release: v3.16.0
