--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRole.yaml.j2
@@ -108,3 +108,10 @@ rules:
   verbs:
   - list
   - watch
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - list
+  - watch
