--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -207,11 +207,12 @@ watchers:
     image: {{ mosquitto.base_image.name }}
     tag: {{ mosquitto.base_image.tag }}
     includes:
-      - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
+      - "[0-9]+\\.[0-9]+\\.[0-9]+.*-openssl"
     excludes:
       - latest
       - ^1\.[0-5]\.
-      - ^1\.6\.[0-9]$
+      - ^1\.6\.[0-9].*$
+      - ^1\.6\.1[0-1].*$
   - type: docker_registry
     repo: {{ nodered.base_image.repo | default('registry-1.docker.io') }}
     image: {{ nodered.base_image.name }}
