--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gitlab.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gitlab.yaml.j2
@@ -26,7 +26,8 @@ spec:
       sourceLabels: [__address__]
     port: redis-metrics
     path: /metrics
-  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
+  - interval: {{ (60 * service_monitors.interval_factor | float) | int }}s
+    scrapeTimeout: 30s
     relabelings:
     - action: replace
       regex: '.*'
