--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -495,9 +495,9 @@ watchers:
   # Apps : Monitoring #
   #####################
   - type: github_commit
-    repo: coreos/kube-prometheus
+    repo: prometheus-operator/kube-prometheus
     branch: master
-    commit: 911543d0eecb0093666dc1991bc206b0f7fea80c
+    commit: 59d6843d3d0c67ba0339241c6e4c38582a78fe3f
   - type: github_commit
     repo: gluster/gluster-mixins
     branch: master
