--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -138,10 +138,11 @@ watchers:
     image: {{ sabnzbd.base_image.name }}
     tag: {{ sabnzbd.base_image.tag }}
     includes:
-      - 2\.[7-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+      - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
+      - ^3.[0-7]\..*
       - .*-alpine3\.[0-9]$
-      - .*-alpine3\.10
+      - .*-alpine3\.1[0-1]
   - name: SABnzbd
     type: github_release
     repo: {{ sabnzbd.repo.name }}
